Updated settings button icon

--- a/components/Navbar/DashboardNavbar.module.css
+++ b/components/Navbar/DashboardNavbar.module.css
@@ -208,6 +208,11 @@
   color: #0a2540;
 }
 
+.settingsIcon {
+  width: 20px;
+  height: 20px;
+}
+
 
 /* ----------------------------------------
    SIGN OUT BUTTON
